--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.3.5",
     "antd": "^5.15.4",
     "localforage": "^1.10.0",
+    "luxon": "^3.4.4",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
