--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.5",
     "antd": "^5.15.4",
+    "diff": "^5.2.0",
+    "diff-match-patch": "^1.0.5",
+    "json-formatter-js": "^2.3.4",
     "localforage": "^1.10.0",
     "luxon": "^3.4.4",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-diff": "^0.0.7",
+    "react-diff-view": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "sort-by": "^1.2.0",
